--- a/src/View/FxEq.ui
+++ b/src/View/FxEq.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>971</width>
+    <width>1014</width>
     <height>391</height>
    </rect>
   </property>
@@ -22,7 +22,7 @@
   <widget class="QGroupBox" name="groupBox_9">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>280</x>
      <y>10</y>
      <width>111</width>
      <height>211</height>
@@ -251,7 +251,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>251</width>
+     <width>271</width>
      <height>211</height>
     </rect>
    </property>
@@ -276,7 +276,7 @@
      <rect>
       <x>50</x>
       <y>30</y>
-      <width>111</width>
+      <width>161</width>
       <height>22</height>
      </rect>
     </property>
@@ -355,7 +355,7 @@
     <property name="geometry">
      <rect>
       <x>-10</x>
-      <y>120</y>
+      <y>110</y>
       <width>101</width>
       <height>21</height>
      </rect>
@@ -371,7 +371,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>80</y>
+      <y>70</y>
       <width>41</width>
       <height>41</height>
      </rect>
@@ -407,8 +407,8 @@
    <widget class="DialKnob" name="fxParam2">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>80</y>
+      <x>110</x>
+      <y>70</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -444,8 +444,8 @@
    <widget class="DialKnob" name="fxParam3">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>80</y>
+      <x>200</x>
+      <y>70</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -518,7 +518,7 @@
    <widget class="DialKnob" name="fxParam5">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>110</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -555,7 +555,7 @@
    <widget class="DialKnob" name="fxParam6">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>200</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -592,8 +592,8 @@
    <widget class="QLabel" name="fxLabel2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>120</y>
+      <x>80</x>
+      <y>110</y>
       <width>111</width>
       <height>21</height>
      </rect>
@@ -608,8 +608,8 @@
    <widget class="QLabel" name="fxLabel3">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>120</y>
+      <x>180</x>
+      <y>110</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -640,7 +640,7 @@
    <widget class="QLabel" name="fxLabel5">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>90</x>
       <y>180</y>
       <width>91</width>
       <height>21</height>
@@ -656,7 +656,7 @@
    <widget class="QLabel" name="fxLabel6">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>180</x>
       <y>180</y>
       <width>91</width>
       <height>21</height>
@@ -669,24 +669,11 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="CheckBox" name="allBypass">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>81</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Bypass All</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_7">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>700</x>
      <y>10</y>
      <width>301</width>
      <height>211</height>
@@ -713,7 +700,7 @@
      <rect>
       <x>60</x>
       <y>30</y>
-      <width>101</width>
+      <width>121</width>
       <height>22</height>
      </rect>
     </property>
@@ -763,7 +750,7 @@
      <rect>
       <x>220</x>
       <y>60</y>
-      <width>71</width>
+      <width>51</width>
       <height>21</height>
      </rect>
     </property>
@@ -777,7 +764,7 @@
    <widget class="DialKnob" name="revReturn">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>20</y>
       <width>51</width>
       <height>41</height>
@@ -815,7 +802,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>140</y>
+      <y>80</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -854,8 +841,8 @@
    <widget class="DialKnob" name="revParam2">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>80</y>
+      <x>20</x>
+      <y>140</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -894,8 +881,8 @@
    <widget class="DialKnob" name="revParam4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>80</y>
+      <x>90</x>
+      <y>140</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -934,8 +921,8 @@
    <widget class="DialKnob" name="revParam6">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>140</y>
+      <x>150</x>
+      <y>80</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -975,7 +962,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>180</y>
+      <y>120</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -990,8 +977,8 @@
    <widget class="QLabel" name="revLabel2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>120</y>
+      <x>0</x>
+      <y>180</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -1006,14 +993,14 @@
    <widget class="QLabel" name="revLabel4">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>120</y>
-      <width>91</width>
+      <x>80</x>
+      <y>180</y>
+      <width>71</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Initial Delay</string>
+     <string>Initial Dly</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -1022,8 +1009,8 @@
    <widget class="QLabel" name="revLabel6">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>180</y>
+      <x>140</x>
+      <y>120</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -1038,7 +1025,7 @@
    <widget class="QLabel" name="revLabel7">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>140</x>
       <y>180</y>
       <width>71</width>
       <height>21</height>
@@ -1054,7 +1041,7 @@
    <widget class="DialKnob" name="revParam7">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>150</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -1097,7 +1084,7 @@
    <widget class="DialKnob" name="revParam3">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>90</x>
       <y>80</y>
       <width>51</width>
       <height>41</height>
@@ -1137,7 +1124,7 @@
    <widget class="QLabel" name="revLabel3">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>70</x>
       <y>120</y>
       <width>91</width>
       <height>21</height>
@@ -1153,7 +1140,7 @@
    <widget class="DialKnob" name="revParam5">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -1193,7 +1180,7 @@
    <widget class="QLabel" name="dryWetLabel1_2">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>120</y>
       <width>51</width>
       <height>21</height>
@@ -1212,7 +1199,7 @@
    <widget class="QLabel" name="revLabel5">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>200</x>
       <y>180</y>
       <width>91</width>
       <height>21</height>
@@ -1228,7 +1215,7 @@
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>210</x>
       <y>160</y>
       <width>21</width>
       <height>31</height>
@@ -1244,7 +1231,7 @@
    <widget class="QLabel" name="label_51">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>260</x>
       <y>160</y>
       <width>21</width>
       <height>31</height>
@@ -1257,27 +1244,14 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="CheckBox" name="revBypass">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>30</y>
-      <width>76</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Bypass</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_8">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>230</y>
-     <width>951</width>
-     <height>151</height>
+     <width>991</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="title">
@@ -1289,9 +1263,9 @@
    <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>40</y>
-      <width>291</width>
+      <x>690</x>
+      <y>20</y>
+      <width>301</width>
       <height>111</height>
      </rect>
     </property>
@@ -1304,7 +1278,7 @@
     <widget class="DialKnob" name="highGain">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>30</y>
        <width>50</width>
        <height>64</height>
@@ -1334,7 +1308,7 @@
       <rect>
        <x>160</x>
        <y>70</y>
-       <width>31</width>
+       <width>41</width>
        <height>16</height>
       </rect>
      </property>
@@ -1364,7 +1338,7 @@
     <widget class="QLabel" name="label_34">
      <property name="geometry">
       <rect>
-       <x>180</x>
+       <x>190</x>
        <y>90</y>
        <width>71</width>
        <height>16</height>
@@ -1405,7 +1379,7 @@
     <widget class="QLabel" name="label_35">
      <property name="geometry">
       <rect>
-       <x>240</x>
+       <x>250</x>
        <y>70</y>
        <width>51</width>
        <height>16</height>
@@ -1436,7 +1410,7 @@
       <rect>
        <x>100</x>
        <y>70</y>
-       <width>51</width>
+       <width>61</width>
        <height>16</height>
       </rect>
      </property>
@@ -1447,7 +1421,7 @@
     <widget class="QLabel" name="label_38">
      <property name="geometry">
       <rect>
-       <x>200</x>
+       <x>210</x>
        <y>20</y>
        <width>31</width>
        <height>16</height>
@@ -1491,8 +1465,8 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>40</y>
-      <width>281</width>
+      <y>20</y>
+      <width>301</width>
       <height>111</height>
      </rect>
     </property>
@@ -1505,7 +1479,7 @@
     <widget class="DialKnob" name="lowGain">
      <property name="geometry">
       <rect>
-       <x>180</x>
+       <x>200</x>
        <y>30</y>
        <width>50</width>
        <height>64</height>
@@ -1532,8 +1506,8 @@
       <rect>
        <x>150</x>
        <y>70</y>
-       <width>31</width>
-       <height>16</height>
+       <width>51</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="text">
@@ -1562,7 +1536,7 @@
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>190</x>
        <y>90</y>
        <width>71</width>
        <height>16</height>
@@ -1603,7 +1577,7 @@
     <widget class="QLabel" name="label_24">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>250</x>
        <y>70</y>
        <width>51</width>
        <height>16</height>
@@ -1645,7 +1619,7 @@
     <widget class="QLabel" name="label_23">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>210</x>
        <y>20</y>
        <width>31</width>
        <height>16</height>
@@ -1688,9 +1662,9 @@
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>40</y>
-      <width>381</width>
+      <x>300</x>
+      <y>20</y>
+      <width>391</width>
       <height>111</height>
      </rect>
     </property>
@@ -1703,7 +1677,7 @@
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>30</x>
        <y>90</y>
        <width>91</width>
        <height>16</height>
@@ -1719,7 +1693,7 @@
     <widget class="QLabel" name="label_25">
      <property name="geometry">
       <rect>
-       <x>0</x>
+       <x>10</x>
        <y>70</y>
        <width>41</width>
        <height>16</height>
@@ -1735,7 +1709,7 @@
     <widget class="QLabel" name="label_26">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>100</x>
        <y>70</y>
        <width>51</width>
        <height>16</height>
@@ -1748,7 +1722,7 @@
     <widget class="DialKnob" name="midFq">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>50</x>
        <y>30</y>
        <width>50</width>
        <height>64</height>
@@ -1773,7 +1747,7 @@
     <widget class="QLabel" name="label_29">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>240</x>
        <y>70</y>
        <width>51</width>
        <height>16</height>
@@ -1786,7 +1760,7 @@
     <widget class="QLabel" name="label_16">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>180</x>
        <y>90</y>
        <width>71</width>
        <height>16</height>
@@ -1802,7 +1776,7 @@
     <widget class="DialKnob" name="midGain">
      <property name="geometry">
       <rect>
-       <x>180</x>
+       <x>190</x>
        <y>30</y>
        <width>50</width>
        <height>64</height>
@@ -1827,7 +1801,7 @@
     <widget class="QLabel" name="label_28">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>20</y>
        <width>31</width>
        <height>16</height>
@@ -1843,7 +1817,7 @@
     <widget class="QLabel" name="label_27">
      <property name="geometry">
       <rect>
-       <x>150</x>
+       <x>160</x>
        <y>70</y>
        <width>31</width>
        <height>16</height>
@@ -1859,7 +1833,7 @@
     <widget class="DialKnob" name="midRes">
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>310</x>
        <y>30</y>
        <width>50</width>
        <height>64</height>
@@ -1881,7 +1855,7 @@
     <widget class="QLabel" name="label_17">
      <property name="geometry">
       <rect>
-       <x>270</x>
+       <x>280</x>
        <y>90</y>
        <width>111</width>
        <height>16</height>
@@ -1897,7 +1871,7 @@
     <widget class="QLabel" name="label_30">
      <property name="geometry">
       <rect>
-       <x>270</x>
+       <x>280</x>
        <y>70</y>
        <width>31</width>
        <height>20</height>
@@ -1913,9 +1887,9 @@
     <widget class="QLabel" name="label_31">
      <property name="geometry">
       <rect>
-       <x>350</x>
+       <x>360</x>
        <y>70</y>
-       <width>51</width>
+       <width>41</width>
        <height>16</height>
       </rect>
      </property>
@@ -1926,7 +1900,7 @@
     <widget class="QLabel" name="label_40">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>50</x>
        <y>20</y>
        <width>51</width>
        <height>20</height>
@@ -1942,7 +1916,7 @@
     <widget class="QLabel" name="label_42">
      <property name="geometry">
       <rect>
-       <x>310</x>
+       <x>320</x>
        <y>20</y>
        <width>31</width>
        <height>16</height>
@@ -1960,9 +1934,9 @@
   <widget class="QGroupBox" name="groupBox_6">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>390</x>
      <y>10</y>
-     <width>291</width>
+     <width>311</width>
      <height>211</height>
     </rect>
    </property>
@@ -1972,7 +1946,7 @@
    <widget class="DialKnob" name="dlyParam4">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>250</x>
       <y>80</y>
       <width>51</width>
       <height>41</height>
@@ -2009,7 +1983,7 @@
    <widget class="QLabel" name="dlyLabel6">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>120</x>
       <y>180</y>
       <width>71</width>
       <height>21</height>
@@ -2062,7 +2036,7 @@
    <widget class="QLabel" name="dlyLabel7">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>190</x>
       <y>180</y>
       <width>91</width>
       <height>21</height>
@@ -2096,7 +2070,7 @@
      <rect>
       <x>210</x>
       <y>20</y>
-      <width>71</width>
+      <width>51</width>
       <height>41</height>
      </rect>
     </property>
@@ -2147,7 +2121,7 @@
    <widget class="QLabel" name="dlyLabel3">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>160</x>
       <y>120</y>
       <width>71</width>
       <height>21</height>
@@ -2163,7 +2137,7 @@
    <widget class="DialKnob" name="dlyParam6">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>130</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -2200,7 +2174,7 @@
    <widget class="DialKnob" name="dlyParam2">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>90</x>
       <y>80</y>
       <width>51</width>
       <height>41</height>
@@ -2274,7 +2248,7 @@
    <widget class="DialKnob" name="dlyParam3">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>170</x>
       <y>80</y>
       <width>51</width>
       <height>41</height>
@@ -2311,7 +2285,7 @@
    <widget class="DialKnob" name="dlyParam7">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>210</x>
       <y>140</y>
       <width>51</width>
       <height>41</height>
@@ -2348,7 +2322,7 @@
    <widget class="QLabel" name="dlyLabel4">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>240</x>
       <y>120</y>
       <width>71</width>
       <height>21</height>
@@ -2377,7 +2351,7 @@
    <widget class="QLabel" name="label_48">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>200</x>
       <y>60</y>
       <width>71</width>
       <height>21</height>
@@ -2393,7 +2367,7 @@
    <widget class="QLabel" name="dlyLabel2">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>80</x>
       <y>120</y>
       <width>71</width>
       <height>21</height>
@@ -2411,7 +2385,7 @@
      <rect>
       <x>50</x>
       <y>30</y>
-      <width>101</width>
+      <width>131</width>
       <height>22</height>
      </rect>
     </property>
@@ -2454,19 +2428,6 @@
      <string>Serial</string>
     </property>
    </widget>
-   <widget class="CheckBox" name="dlyBypass">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>30</y>
-      <width>76</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Bypass</string>
-    </property>
-   </widget>
    <zorder>dlyParam4</zorder>
    <zorder>dlyLabel6</zorder>
    <zorder>dlyParam1</zorder>
@@ -2486,7 +2447,6 @@
    <zorder>delayType</zorder>
    <zorder>DlyRevConnection</zorder>
    <zorder>dlyReturn</zorder>
-   <zorder>dlyBypass</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
